
* master *

* Start to support 2011 code named "Denali".

* Limit and Offset can take SqlLiteral objects now.


* 3.0.9 *

* Fix array literal parsing bug for ruby 1.9.


* 3.0.8 *

* Support for ActiveRecord v3.0.3 and ARel v2.0.7


* 3.0.7 * 

* Properly quote table names when reflecting on views.

* Add "dead or not enabled" to :dblib's lost connection messages.


* 3.0.6 *

* Maintenance release. Lock down to ActiveRecord 3.0.1 using ARel 1.0.0.


* 3.0.5 *

* Fixed native database type memoization, now at connection instance level. Fix #execute_procedure for :dblib mode to return indifferent access rows too.

* Make login timeout and query timeout backward database.yml friendly for :dblib mode.


* 3.0.4 *

* Add multiple results set support with #execute_procedure for :dblib mode. [Ken Collins]

* Simplify encoding support. [Ken Collins]

* Add binary timestamp datatype handling. [Erik Bryn]


* 3.0.3

* Add TinyTDS/dblib connection mode. [Ken Collins]


* 3.0.2

* Fix DSN'less code. [Erik Bryn]


* 3.0.1

* Support DSN'less connections. Resolves ticket 38. 

* Support upcoming ruby odbc 0.99992


* 3.0.0

* Release rails 3 version!


* 2.3.8

* Properly quote all database names in rake helper methods. [Ken Collins]


* 2.3.7

* Correctly use :date/:time SQL types in 2008 [Ken Collins]


* 2.3.6

* Allow DNS's to not contain a database and use what is in database.yml [Marco Mastrodonato]

* Rake tasks methods for vanilla rails :db namespace parity. [Ken Collins]

* IronRuby integrated security fixes [Jimmy Schementi]


* 2.3.5

* Initial IronRuby ADONET connection mode support baked right in. Removed most &block 
  parameters, no handle/request object yielded anymore. Better abstraction and compliance 
  per the ActiveRecord abstract adapter to not yielding handles for #execute and only for 
  low level #select. Better wrapping of all queries at lowest level in #log so exceptions 