@@ -1,6 +1,8 @@
 
 * master *
 
+* Flatten sp_helpconstraint when looking for constraints just in case fks are present. Issue #64.
+
 * Start to support 2011 code named "Denali".
 
 * Limit and Offset can take SqlLiteral objects now.
